[build-system]
requires = [
    "setuptools >= 62.6",
    "argparse-manpage[setuptools]",
    "pbshist @ https://test-files.pythonhosted.org/packages/f8/43/ffe0736a20ecf8596b0cce7ac01c606dd8c01c89957d66543d279c950a15/pbshist-0.2-py3-none-any.whl",
]
build-backend = "setuptools.build_meta"

[project]
name = "qhist"
version = "1.0b1"
authors = [
  { name="Brian Vanderwende", email="vanderwb@ucar.edu" },
]
description = "A utility to query historical PBS Pro job data"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
]

# TODO: Update when supporting PEP 639 via newer setuptools
#license = "MIT"
#license-files = ["LICENSE"]
license = { file = "LICENSE" }

dependencies = [
    "pbshist>=0.2",
]

[project.urls]
homepage = "https://github.com/NCAR/qhist"
issues = "https://github.com/NCAR/qhist/issues"

[project.scripts]
qhist = "qhist.qhist:main"

[tool.setuptools.cmdclass]
build_py = "build_manpages.build_py"
install = "build_manpages.install"
build_manpages = "build_manpages.build_manpages"

[tool.build_manpages]
manpages = [
    "man/man1/qhist.1:function=get_parser:pyfile=src/qhist/qhist.py:author=Written by Brian Vanderwende.:project_name=qhist:version=1.0:description=a utility for querying historical PBS records:manual_title=PBS Professional Community Utilities",
]
