# Setuptools version required for PEP 639
[build-system]
requires = [
    "setuptools >= 77.0",
    "setuptools-scm>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "pbs-qhist"
dynamic = [ "version" ]
authors = [
    { name="Brian Vanderwende", email="vanderwb@ucar.edu" },
]
description = "A utility to query historical PBS Pro job data"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Operating System :: OS Independent",
    "Topic :: System :: Distributed Computing",
]

license = "MIT"
license-files = ["LICENSE"]

dependencies = [
    "pbsparse>=0.2.4",
]

[project.urls]
homepage = "https://github.com/NCAR/qhist"
issues = "https://github.com/NCAR/qhist/issues"

[project.scripts]
qhist = "qhist.qhist:main"

[tool.setuptools_scm]
